--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
         <div class="container">
             <div class="footer-logo">
       <a class="header-logo" href="./index.html"
-        >Web<span class="Studio2">Studio</span>
+        >Web<span class="Studio2"................................................................22>Studio</span>
     </div>
       </a>
       <address>
