--- a/index.html
+++ b/index.html
@@ -182,22 +182,22 @@
           <p class="clients-text">Постійні клієнти</p>
           <ul class="clients-father">
             <li class="clients-son">
-                <img src="./img/Client 1 (1).png" alt="img">
+                <img src="./img/Logo (1).svg" alt="img">
             </li>
             <li class="clients-son">
-              <img src="./img/Client 2 (1).png" alt="img">
+              <img src="./img/Logo (2).svg" alt="img">
             </li>
             <li class="clients-son">
-              <img src="./img/Client 3.png" alt="img">
+              <img src="./img/Logo (3).svg" alt="img">
             </li>
             <li class="clients-son">
-              <img src="./img/Client 4.png" alt="img">
+              <img src="./img/Logo (4).svg" alt="img">
             </li>
             <li class="clients-son">
-              <img src="./img/Client 5.png" alt="img">
+              <img src="./img/Logo (5).svg" alt="img">
             </li>
             <li class="clients-son">
-              <img src="./img/Client 6.png" alt="img">
+              <img src="./img/Logo (6).svg" alt="img">
             </li>
           </ul>
         </div>
