--- a/index.html
+++ b/index.html
@@ -218,6 +218,23 @@
         </ul>
       </address>
     </div>
+    <div class="social-div">
+      <p  class="socials-text">ПРИЄДНУЙТЕСЬ</p>
+      <ul class="nav-social">
+        <li>
+        <img src="./img/Ellipse.svg" alt="#">
+        </li>
+        <li>
+          <img src="./img/Ellipse (1).svg" alt="#">
+        </li>
+        <li>
+          <img src="./img/Ellipse (2).svg" alt="#">
+        </li>
+        <li>
+          <img src="./img/Ellipse (3).svg" alt="#">
+        </li>
+      </ul>
+    </div>
     </footer>
   </body>
 </html>
